amorphie.mocks/manifest-aws/aws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amorphie-mocks
  namespace: amorphie-mocks
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: amorphie-mocks
