amorphie.mocks/manifest-aws/aws-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amorphie-mocks
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:175603473276:certificate/306c8dc7-050a-4cb1-9bf3-1dfe1afe579b
    alb.ingress.kubernetes.io/ssl-redirect: '443' # add this when using ssl certifications
    # if the key "kubernetes.io/role/elb" and value "1" is in the tags of the subnets, you don't need to set "alb.ingress.kubernetes.io/subnets:" annotation
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]' #'[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 8080}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: amorphie-mocks
              port: 
                number: 80
